--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,30 @@
 *.war
 *.ear
 
+# MAC Specific Directory Info
+*.DS_Store
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# RemoteSystemsTempFiles
+RemoteSystemsTempFiles/*
+
+# Eclipse Settings
+.metadata/*
+
+# Eclipse Project's Classpath Info
+*/.classpath
+
+# Eclipse Project's Details
+*/.project
+
+# Eclipse Project's Settings
+*/.settings
+
+# Temp Save Generated Files
+~*.xlsx
+
+# Log Files
+*.log
+
